[gd_scene load_steps=53 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/walk_up/walk_up_0.png" type="Texture" id=2]
[ext_resource path="res://assets/player/walk_up/walk_up_1.png" type="Texture" id=3]
[ext_resource path="res://assets/player/walk_up/walk_up_2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/walk_up/walk_up_3.png" type="Texture" id=5]
[ext_resource path="res://assets/player/walk_up/walk_up_4.png" type="Texture" id=6]
[ext_resource path="res://assets/player/walk_up/walk_up_5.png" type="Texture" id=7]
[ext_resource path="res://assets/player/walk_down/walk_down_0.png" type="Texture" id=8]
[ext_resource path="res://assets/player/walk_down/walk_down_1.png" type="Texture" id=9]
[ext_resource path="res://assets/player/walk_down/walk_down_2.png" type="Texture" id=10]
[ext_resource path="res://assets/player/walk_down/walk_down_3.png" type="Texture" id=11]
[ext_resource path="res://assets/player/walk_down/walk_down_4.png" type="Texture" id=12]
[ext_resource path="res://assets/player/walk_down/walk_down_5.png" type="Texture" id=13]
[ext_resource path="res://assets/player/idle_up/idle_up_0.png" type="Texture" id=14]
[ext_resource path="res://assets/player/idle_up/idle_up_1.png" type="Texture" id=15]
[ext_resource path="res://assets/player/idle_up/idle_up_2.png" type="Texture" id=16]
[ext_resource path="res://assets/player/idle_up/idle_up_3.png" type="Texture" id=17]
[ext_resource path="res://assets/player/idle_up/idle_up_4.png" type="Texture" id=18]
[ext_resource path="res://assets/player/idle_up/idle_up_5.png" type="Texture" id=19]
[ext_resource path="res://assets/player/walk_side/walk_side_0.png" type="Texture" id=20]
[ext_resource path="res://assets/player/walk_side/walk_side_1.png" type="Texture" id=21]
[ext_resource path="res://assets/player/walk_side/walk_side_2.png" type="Texture" id=22]
[ext_resource path="res://assets/player/walk_side/walk_side_3.png" type="Texture" id=23]
[ext_resource path="res://assets/player/walk_side/walk_side_4.png" type="Texture" id=24]
[ext_resource path="res://assets/player/walk_side/walk_side_5.png" type="Texture" id=25]
[ext_resource path="res://assets/player/idle_side/idle_side_0.png" type="Texture" id=26]
[ext_resource path="res://assets/player/idle_side/idle_side_1.png" type="Texture" id=27]
[ext_resource path="res://assets/player/idle_side/idle_side_2.png" type="Texture" id=28]
[ext_resource path="res://assets/player/idle_side/idle_side_3.png" type="Texture" id=29]
[ext_resource path="res://assets/player/idle_side/idle_side_4.png" type="Texture" id=30]
[ext_resource path="res://assets/player/idle_side/idle_side_5.png" type="Texture" id=31]
[ext_resource path="res://assets/player/idle_down/idle_down_0.png" type="Texture" id=32]
[ext_resource path="res://assets/player/idle_down/idle_down_1.png" type="Texture" id=33]
[ext_resource path="res://assets/player/idle_down/idle_down_2.png" type="Texture" id=34]
[ext_resource path="res://assets/player/idle_down/idle_down_3.png" type="Texture" id=35]
[ext_resource path="res://assets/player/idle_down/idle_down_4.png" type="Texture" id=36]
[ext_resource path="res://assets/player/idle_down/idle_down_5.png" type="Texture" id=37]
[ext_resource path="res://assets/player/shadow.png" type="Texture" id=38]
[ext_resource path="res://scripts/camera.gd" type="Script" id=39]
[ext_resource path="res://assets/light.png" type="Texture" id=40]
[ext_resource path="res://scripts/interface.gd" type="Script" id=41]
[ext_resource path="res://assets/sfx/Dworf_StartGame.wav" type="AudioStream" id=42]
[ext_resource path="res://assets/sfx/Knight_Footstep_1.wav" type="AudioStream" id=43]
[ext_resource path="res://assets/sfx/Knight_Footstep_2.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/sfx/Knight_Footstep_3.wav" type="AudioStream" id=45]
[ext_resource path="res://assets/sfx/Knight_Footstep_4.wav" type="AudioStream" id=46]
[ext_resource path="res://assets/sfx/Dworf_Hit_1.wav" type="AudioStream" id=47]
[ext_resource path="res://assets/sfx/Dworf_Hit_2.wav" type="AudioStream" id=48]
[ext_resource path="res://assets/sfx/Dworf_Death.wav" type="AudioStream" id=49]
[ext_resource path="res://assets/sfx/Dworf_TowerDestroyed.wav" type="AudioStream" id=50]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "walk_side",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "idle_side",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "idle_down",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.0
height = 60.0

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle_down"
frame = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 110 )
texture = ExtResource( 38 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 110 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
editor/display_folded = true
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 39 )

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 0.3
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 110 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 40 )
shadow_enabled = true
shadow_gradient_length = 10.0
shadow_filter = 5

[node name="Interface" type="Node2D" parent="."]
script = ExtResource( 41 )

[node name="RegenerateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 42 )
volume_db = -10.0

[node name="Footstep0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 43 )
volume_db = -15.0

[node name="Footstep1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 44 )
volume_db = -15.0

[node name="Footstep2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 45 )
volume_db = -15.0

[node name="Footstep3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 46 )
volume_db = -15.0

[node name="Hit0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 47 )
volume_db = -10.0

[node name="Hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 48 )
volume_db = -10.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 49 )

[node name="Destroyed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 50 )
volume_db = -5.0

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Camera2D/Tween" to="Camera2D" method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Camera2D/Tween" to="Camera2D" method="_on_Tween_tween_step"]
[connection signal="timeout" from="RegenerateTimer" to="." method="_on_RegenerateTimer_timeout"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
